pod-sizer/pod-sizer.yml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: pod-sizer
spec:
  module: registry://ghcr.io/robertsirc/rust-wasm-labs/pod_sizer:v0.0.1
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
  
  mutating: false
  settings:
    cpu_limits: "1.0"
